# fastapi-template

./: .gitignore  Dockerfile  items.db  main.py  pyproject.toml
app/: settings.py
app/db/: db.py
app/db/handlers/: items_handler.py
app/models/: item.py
app/routers/: items.py
tests/: conftest.py
tests/test_routers/: test_items_router.py
